--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,11 @@
     <title>Go home</title>
   </head>
   <body>
-    <h1>Hello world!!!!!</h1>
+    <a href="">Login</a>
+    <ul>
+      {{range .}}
+      <li>{{.Title}}</li>
+      {{end}}
+    </ul>
   </body>
 </html>
