fix: voting feature
Change uint to string so js can parse the string
correctly.

--- a/static/index.html
+++ b/static/index.html
@@ -30,6 +30,7 @@
         },
       });
 
+      // take everything as string
       const pageData = await data.json();
       pageData.forEach((row) => {
         const li = document.createElement("li");
